--- a/index.html
+++ b/index.html
@@ -1,122 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Fat Boss Gambling</title>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <meta
-      name="description"
-      content="Welcome to Fat Boss Casino! Our online casino has all your favourite games, including slots, table games, and video poker. Fully licensed and regulated, join now and start winning big!"
-    />
-    <script src="main.js"></script>
-  </head>
 
-  <body class="main-wrapper">
-    <header class="navbar">
-      <a href="https://fatbossgambling.ph" class="logo"></a>
-      <ul class="navlist">
-        <li class="navitem">
-          <a href="/" class="navlink">Promotions</a>
-        </li>
-        <li class="navitem">
-          <a href="/" class="navlink">Blog</a>
-        </li>
-        <li class="navitem">
-          <a
-            href="https://mtm.flikdown.com/C.ashx?btag=a_15221b_2938c_&affid=8828&siteid=15221&adid=2938&c="
-            class="navbutton"
-            >Welcome Bonus</a
-          >
-        </li>
-      </ul>
-    </header>
+    <head>
+        <meta charset="utf-8" />
+        <title>Fat Boss Gambling</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+        <meta name="description"
+            content="Welcome to Fat Boss Casino! Our online casino has all your favourite games, including slots, table games, and video poker. Fully licensed and regulated, join now and start winning big!" />
+        <script src="main.js"></script>
+    </head>
 
-    <main>
-      <div class="hero">
-        <div class="hero-content">
-          <h1 class="hero-header">
-            Win Big at <span class="fat-boss">Fat Boss</span>
-          </h1>
-          <h2 class="hero-subheader">€350 Welcome Bonus & 100 Free Spins</h2>
-          <a href="#" class="hero-button">CLAIM YOUR BONUS</a>
-        </div>
-      </div>
+    <body class="main-wrapper">
+        <header class="navbar">
+            <a href="https://fatbossgambling.ph" class="logo"></a>
+            <ul class="navlist">
+                <li class="navitem">
+                    <a href="/" class="navlink">Promotions</a>
+                </li>
+                <li class="navitem">
+                    <a href="/" class="navlink">Blog</a>
+                </li>
+                <li class="navitem">
+                    <a href="https://mtm.flikdown.com/C.ashx?btag=a_15221b_2938c_&affid=8828&siteid=15221&adid=2938&c="
+                        class="navbutton">Welcome Bonus</a>
+                </li>
+            </ul>
+        </header>
 
-        <!-- Main content goes here -->
-        <!-- Promo section -->
-        <section class="main-content">
-          <div class="promo-section">
-            <div class="promo-text">
-              <h1 class="promo-head">
-                Join <span class="fat-boss">Fat Boss</span> Online Casino
-              </h1>
-              <h2 class="promo-subHead">
-                & Claim Your 350 EUR Sign-Up Bonus and 100 Free Spins
-              </h2>
-              <p class="promo-para">
-                Do you want to experience the thrill of winning big at an online
-                casino? Look no further than Fat Boss! Our state-of-the-art
-                platform offers a wide selection of exciting casino games, all
-                powered by top-notch software. And as a special offer for new
-                players, we're offering a sign-up bonus of 350 EUR and 100 free
-                spins.
-                <br />
-                <br />
-                That's right - sign up now and get 350 EUR and 100 free spins to
-                use on your favourite games. So don't miss out - join Fat Boss
-                and claim your bonus today!
-              </p>
-              <a href="#" class="promo-button">GET YOUR BONUS</a>
+        <main class="main-content">
+            <div class="hero">
+                <div class="hero-content">
+                    <h1 class="hero-header">
+                        Win Big at <span class="fat-boss">Fat Boss</span>
+                    </h1>
+                    <h2 class="hero-subheader">€350 Welcome Bonus & 100 Free Spins</h2>
+                    <a href="#" class="hero-button">CLAIM YOUR BONUS</a>
+                </div>
             </div>
-            <div class="promo-image">
-              <img src="images/body/fatboss.png" alt="Fat Boss Online Casino" />
-            </div>
-          </div>
-          <!-- Games section -->
-          <div class="games-section">
-            <h1 class="games-head">
-              Find Your Game at <span class="fat-boss">Fat Boss</span> Online
-              Casino
-            </h1>
-            <h2 class="games-subHead">
-              Hundreds of Exciting GAMES to Choose From
-            </h2>
-            <p class="games-text">
-              Are you looking for the best games in the industry? Look no
-              further than Fatt Boss! We've got all your favourites, from
-              classic slots and table games to the latest releases. With
-              top-rated graphics and smooth gameplay, you'll feel right in the
-              middle of the action. Plus, with new games added all the time,
-              you'll always have options. Try your luck today and see if you
-              have what it takes to be a winner!
-            </p>
-          </div>
-        </section>
 
-        <!-- Game Images -->
-        <section class="grid-images">
-            <img src="./images/game-images/BigBassBon.jpg" alt="BigBassBon">
-            <img src="./images/game-images/Woodlanders™-Thumb.jpg" alt="Woodlanders™">
-            <img src="./images/game-images/megawaysmob_thumb.jpg" alt="Megawaysmob">
-            <img src="./images/game-images/newTemple.jpg" alt="Temple of Wealth">
-            <img src="./images/game-images/Craps1st.jpg" alt="Craps1st">
-            <img src="./images/game-images/Hit-the-Bank-Hold-and-Win-Thumb.jpg" alt="Hit the bank and win">
-            <img src="./images/game-images/MONOPOLY-Big-Baller-Thumb.jpg" alt="Monopoly Big Baller">
-            <img src="./images/game-images/Net-Gains-Thumb.jpg" alt="Net Gains">
-            <img src="./images/game-images/thor-power-thumb.jpg" alt="Power of Thor">
-            <img src="./images/game-images/Rock-Bottom-Thumb.jpg" alt="Rock Bottom">
-            <img src="./images/game-images/Great-Pigsby-Megaways-Thumb.jpg" alt="Great Pigsby Megaways">
-            <img src="./images/game-images/Ozwins-jackpots.jpg" alt="Ozwins Jackpots">
-            <img src="./images/game-images/SpacemanThumb.png" alt="Spaceman">
-            <img src="./images/game-images/Napoleon-Vs-Rabbits-Thumb.jpg" alt="Napoleon Vs Rabbits">
-        </section>
-    </main>
-    <footer>
-      <!-- Footer content goes here -->
-    </footer>
-  </body>
+            <!-- Main content goes here -->
+            <!-- Promo section -->
+            <section class="promo-section">
+                <div class="promo-text">
+                    <h1 class="promo-head">
+                        Join <span class="fat-boss">Fat Boss</span> Online Casino
+                    </h1>
+                    <h2 class="promo-subHead">
+                        & Claim Your 350 EUR Sign-Up Bonus and 100 Free Spins
+                    </h2>
+                    <p class="promo-para">
+                        Do you want to experience the thrill of winning big at an online
+                        casino? Look no further than Fat Boss! Our state-of-the-art
+                        platform offers a wide selection of exciting casino games, all
+                        powered by top-notch software. And as a special offer for new
+                        players, we're offering a sign-up bonus of 350 EUR and 100 free
+                        spins.
+                        <br />
+                        <br />
+                        That's right - sign up now and get 350 EUR and 100 free spins to
+                        use on your favourite games. So don't miss out - join Fat Boss
+                        and claim your bonus today!
+                    </p>
+                    <a href="#" class="promo-button">GET YOUR BONUS</a>
+                </div>
+                <div class="promo-image">
+                    <img src="images/body/fatboss.png" alt="Fat Boss Online Casino" />
+                </div>
+            </section>
+
+            <!-- Games section -->
+            <section class="games-section">
+                <h1 class="games-head">
+                    Find Your Game at <span class="fat-boss">Fat Boss</span> Online
+                    Casino
+                </h1>
+                <h2 class="games-subHead">
+                    Hundreds of Exciting GAMES to Choose From
+                </h2>
+                <p class="games-text">
+                    Are you looking for the best games in the industry? Look no
+                    further than Fatt Boss! We've got all your favourites, from
+                    classic slots and table games to the latest releases. With
+                    top-rated graphics and smooth gameplay, you'll feel right in the
+                    middle of the action. Plus, with new games added all the time,
+                    you'll always have options. Try your luck today and see if you
+                    have what it takes to be a winner!
+                </p>
+            </section>
+
+            <!-- Game Images -->
+            <section class="grid-images">
+                <img src="./images/game-images/BigBassBon.jpg" alt="BigBassBon">
+                <img src="./images/game-images/Woodlanders™-Thumb.jpg" alt="Woodlanders™">
+                <img src="./images/game-images/megawaysmob_thumb.jpg" alt="Megawaysmob">
+                <img src="./images/game-images/newTemple.jpg" alt="Temple of Wealth">
+                <img src="./images/game-images/Craps1st.jpg" alt="Craps1st">
+                <img src="./images/game-images/Hit-the-Bank-Hold-and-Win-Thumb.jpg" alt="Hit the bank and win">
+                <img src="./images/game-images/MONOPOLY-Big-Baller-Thumb.jpg" alt="Monopoly Big Baller">
+                <img src="./images/game-images/Net-Gains-Thumb.jpg" alt="Net Gains">
+                <img src="./images/game-images/thor-power-thumb.jpg" alt="Power of Thor">
+                <img src="./images/game-images/Rock-Bottom-Thumb.jpg" alt="Rock Bottom">
+                <img src="./images/game-images/Great-Pigsby-Megaways-Thumb.jpg" alt="Great Pigsby Megaways">
+                <img src="./images/game-images/Ozwins-jackpots.jpg" alt="Ozwins Jackpots">
+                <img src="./images/game-images/SpacemanThumb.png" alt="Spaceman">
+                <img src="./images/game-images/Napoleon-Vs-Rabbits-Thumb.jpg" alt="Napoleon Vs Rabbits">
+            </section>
+
+            <!-- Devices Section -->
+            <section class="devices-section">
+                <div class="devices-image">
+                    <img src="images/body/fatboss.png" alt="Fat Boss Online Casino" />
+                </div>
+                <div class="devices-text">
+                    <h1 class="devices-head">
+                        Take <span class="fat-boss">Fat Boss</span> Online Casino
+                    </h1>
+                    <h2 class="devices-subHead">
+                        Enjoy Your 350 EUR Sign-Up Bonus and 100 Free Spins
+                    </h2>
+                    <p class="devices-para">
+                        Do you want to experience the thrill of winning big at an online
+                        casino? Look no further than Fat Boss! Our state-of-the-art
+                        platform offers a wide selection of exciting casino games, all
+                        powered by top-notch software. And as a special offer for new
+                        players, we're offering a sign-up bonus of 350 EUR and 100 free
+                        spins.
+                    </p>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <!-- Footer content goes here -->
+        </footer>
+    </body>
+
 </html>
