--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <!-- Devices Section -->
             <section class="devices-section">
                 <div class="devices-image">
-                    <img src="images/body/fatboss.png" alt="Fat Boss Online Casino" />
+                    <img src="images/body/mobile-phone-gaming.png" alt="Fat Boss Online Casino" />
                 </div>
                 <div class="devices-text">
                     <h1 class="devices-head">
@@ -120,6 +120,45 @@
                         Enjoy Your 350 EUR Sign-Up Bonus and 100 Free Spins
                     </h2>
                     <p class="devices-para">
+                        Do you want to experience the thrill of winning big at an online
+                        casino? Look no further than Fat Boss! Our state-of-the-art
+                        platform offers a wide selection of exciting casino games, all
+                        powered by top-notch software. And as a special offer for new
+                        players, we're offering a sign-up bonus of 350 EUR and 100 free
+                        spins.
+                    </p>
+                </div>
+            </section>
+
+            <!-- Review Section -->
+            <section class="review-section">
+                <div class="review-text">
+                    <h1 class="review-head">
+                        Players love <span class="fat-boss">Fat Boss</span> Online Casino
+                    </h1>
+                    <h2 class="review-subHead">
+                        The Premier Destination Top-Rated real cash games
+                    </h2>
+                </div>
+                <div class="reviews">
+                    <div class="review-wrap">
+                        <div class="wrap-head">
+                            
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Payment Section  -->
+            <section class="payment-section"> 
+                <div class="payment-text">
+                    <h1 class="payment-head">
+                        Flexible Payment Options at <span class="fat-boss">Fat Boss</span> Casino
+                    </h1>
+                    <h2 class="payment-subHead">
+                        Visa Masteracard 350 EUR Sign-Up Bonus and 100 Free Spins
+                    </h2>
+                    <p class="payment-para">
                         Do you want to experience the thrill of winning big at an online
                         casino? Look no further than Fat Boss! Our state-of-the-art
                         platform offers a wide selection of exciting casino games, all
