Games and Offer section

--- a/index.html
+++ b/index.html
@@ -95,10 +95,12 @@
                 <img src="./images/game-images/Woodlanders™-Thumb.jpg" alt="Woodlanders™">
                 <img src="./images/game-images/megawaysmob_thumb.jpg" alt="Megawaysmob">
                 <img src="./images/game-images/newTemple.jpg" alt="Temple of Wealth">
+                <img src="./images/game-images/Napoleon-Vs-Rabbits-Thumb.jpg" alt="Napoleon Vs Rabbits">
                 <img src="./images/game-images/Craps1st.jpg" alt="Craps1st">
                 <img src="./images/game-images/Hit-the-Bank-Hold-and-Win-Thumb.jpg" alt="Hit the bank and win">
                 <img src="./images/game-images/MONOPOLY-Big-Baller-Thumb.jpg" alt="Monopoly Big Baller">
                 <img src="./images/game-images/Net-Gains-Thumb.jpg" alt="Net Gains">
+                <img src="./images/game-images/Napoleon-Vs-Rabbits-Thumb.jpg" alt="Napoleon Vs Rabbits">
                 <img src="./images/game-images/thor-power-thumb.jpg" alt="Power of Thor">
                 <img src="./images/game-images/Rock-Bottom-Thumb.jpg" alt="Rock Bottom">
                 <img src="./images/game-images/Great-Pigsby-Megaways-Thumb.jpg" alt="Great Pigsby Megaways">
@@ -107,6 +109,9 @@
                 <img src="./images/game-images/Napoleon-Vs-Rabbits-Thumb.jpg" alt="Napoleon Vs Rabbits">
             </section>
 
+            <!-- Offer Section -->
+            g
+
             <!-- Devices Section -->
             <section class="devices-section">
                 <div class="devices-image">
@@ -114,18 +119,18 @@
                 </div>
                 <div class="devices-text">
                     <h1 class="devices-head">
-                        Take <span class="fat-boss">Fat Boss</span> Online Casino
+                        Take <span class="fat-boss">Fat Boss</span> with you wherever you go!
                     </h1>
                     <h2 class="devices-subHead">
-                        Enjoy Your 350 EUR Sign-Up Bonus and 100 Free Spins
+                        Enjoy seamless, mobile-friendly gaming on any device.
                     </h2>
                     <p class="devices-para">
-                        Do you want to experience the thrill of winning big at an online
-                        casino? Look no further than Fat Boss! Our state-of-the-art
-                        platform offers a wide selection of exciting casino games, all
-                        powered by top-notch software. And as a special offer for new
-                        players, we're offering a sign-up bonus of 350 EUR and 100 free
-                        spins.
+                        At Fatt Boss, we understand that players want the flexibility to game on the go. As a result, we
+                        offer a fully mobile-responsive website so that you can play your favourite games from any
+                        device, anywhere. With easy navigation and intuitive controls, you'll be able to jump into the
+                        action in no time. Consequently, our mobile site is just as secure as our desktop version so you
+                        can play confidently. Whether you prefer to play on your phone, tablet, or laptop, Fatt Boss has
+                        you covered.
                     </p>
                 </div>
             </section>
@@ -141,16 +146,82 @@
                     </h2>
                 </div>
                 <div class="reviews">
-                    <div class="review-wrap">
-                        <div class="wrap-head">
-                            
+                    <div class="review-flex"> 
+                        <div class="empty"></div>
+                        <div class="review-wrap">
+                            <div class="wrap-head">
+                                <div class="wrap-subHead">
+                                    <img src="./images/review-pfps/pfp-f.png" alt="Profile" class="profile-img">
+                                    <div class="name-date">
+                                        <p class="name">- Zoey, Szczecin</p>
+                                        <p class="date">07/10/2022</p>
+                                    </div>
+                                </div>
+                                <img src="./images/icons/5-stars.png" alt="Star" class="star-img">
+                            </div>
+                            <p class="review-para">
+                                “I’ve been a Fatt Boss player for over a year, and I’ve had nothing but positive
+                                experiences. The games are top-notch, and customer support is always available to help
+                                with any issues. Highly recommend!”
+                            </p>
+                        </div>
+                        <div class="review-wrap">
+                            <div class="wrap-head">
+                                <div class="wrap-subHead">
+                                    <img src="./images/review-pfps/pfp-m-1.png" alt="Profile" class="profile-img">
+                                    <div class="name-date">
+                                        <p class="name">- Jakub, Warsaw</p>
+                                        <p class="date">07/10/2022</p>
+                                    </div>
+                                </div>
+                                <img src="./images/icons/5-stars.png" alt="Star" class="star-img">
+                            </div>
+                            <p class="review-para">
+                                “I’ve been a Fatt Boss player for over a year, and I’ve had nothing but positive
+                                experiences. The games are top-notch, and customer support is always available to help
+                                with any issues. Highly recommend!”
+                            </p>
+                        </div>
+                    </div>
+                    <div class="review-flex">
+                        <div class="review-wrap">
+                            <div class="wrap-head">
+                                <div class="wrap-subHead">
+                                    <img src="./images/review-pfps/pfp-m-2.png" alt="Profile" class="profile-img">
+                                    <div class="name-date">
+                                        <p class="name">- Mikolaj, Wrocław</p>
+                                        <p class="date">04/08/2022</p>
+                                    </div>
+                                </div>
+                                <img src="./images/icons/5-stars.png" alt="Star" class="star-img">
+                            </div>
+                            <p class="review-para">
+                                “As a seasoned player, I know a good site when I see one. Fatt Boss has exceeded all of my
+                                expectations – the games are fun and the payouts are quick. A+ all around!”
+                            </p>
+                        </div>
+                        <div class="review-wrap">
+                            <div class="wrap-head">
+                                <div class="wrap-subHead">
+                                    <img src="./images/review-pfps/pfp-m.png" alt="Profile" class="profile-img">
+                                    <div class="name-date">
+                                        <p class="name">- Piotr, Gdańsk</p>
+                                        <p class="date">09/06/2022</p>
+                                    </div>
+                                </div>
+                                <img src="./images/icons/5-stars.png" alt="Star" class="star-img">
+                            </div>
+                            <p class="review-para">
+                                “As a seasoned player, I know a good site when I see one. Fatt Boss has exceeded all of my
+                                expectations – the games are fun and the payouts are quick. A+ all around!”
+                            </p>
                         </div>
                     </div>
                 </div>
             </section>
 
             <!-- Payment Section  -->
-            <section class="payment-section"> 
+            <section class="payment-section">
                 <div class="payment-text">
                     <h1 class="payment-head">
                         Flexible Payment Options at <span class="fat-boss">Fat Boss</span> Casino
