--- a/index.html
+++ b/index.html
@@ -110,7 +110,22 @@
             </section>
 
             <!-- Offer Section -->
-            g
+            <section class="offer-section">
+                <div class="offer-image">
+                    <img src="images/body/center.png" alt="Fat Boss Online Casino" />
+                </div>
+                <div class="offer-text">
+                    <h1 class="offer-head">
+                        <span class="fat-boss">“</span>
+                         I’m going to make you an offer you can’t refuse 
+                         <span class="fat-boss">”</span>
+                    </h1>
+                    <h2 class="offer-subHead">
+                        350 EUR Welcome Bonus & 100 Free Spins
+                    </h2>
+                    <button class="offer-button">ACCEPT YOUR BONUS & START WINNING BIG!</button>
+                </div>
+            </section>
 
             <!-- Devices Section -->
             <section class="devices-section">
@@ -146,7 +161,7 @@
                     </h2>
                 </div>
                 <div class="reviews">
-                    <div class="review-flex"> 
+                    <div class="review-flex">
                         <div class="empty"></div>
                         <div class="review-wrap">
                             <div class="wrap-head">
@@ -196,7 +211,8 @@
                                 <img src="./images/icons/5-stars.png" alt="Star" class="star-img">
                             </div>
                             <p class="review-para">
-                                “As a seasoned player, I know a good site when I see one. Fatt Boss has exceeded all of my
+                                “As a seasoned player, I know a good site when I see one. Fatt Boss has exceeded all of
+                                my
                                 expectations – the games are fun and the payouts are quick. A+ all around!”
                             </p>
                         </div>
@@ -212,7 +228,8 @@
                                 <img src="./images/icons/5-stars.png" alt="Star" class="star-img">
                             </div>
                             <p class="review-para">
-                                “As a seasoned player, I know a good site when I see one. Fatt Boss has exceeded all of my
+                                “As a seasoned player, I know a good site when I see one. Fatt Boss has exceeded all of
+                                my
                                 expectations – the games are fun and the payouts are quick. A+ all around!”
                             </p>
                         </div>
