--- a/Polish.html
+++ b/Polish.html
@@ -35,6 +35,9 @@
               >Welcome Bonus</a
             >
           </li>
+          <li class="navitem">
+            <a href="/Polish.html" class="navbutton">Polish</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -54,6 +57,9 @@
             >Welcome Bonus</a
           >
         </li>
+        <li class="navitem">
+            <a href="/Polish.html" class="navbutton">Polish</a>
+          </li>
       </ul>
     </header>
 
@@ -94,16 +100,11 @@
       <!-- Games section -->
       <section class="games-section">
         <h1 class="games-head">
-          Find Your Game at <span class="fat-boss">Fat Boss</span> Online Casino
+            Znajdź swoją grę w kasynie internetowym <span class="fat-boss">Fat Boss</span>.
         </h1>
-        <h2 class="games-subHead">Hundreds of Exciting GAMES to Choose From</h2>
+        <h2 class="games-subHead">Setki ekscytujących gier do wyboru.</h2>
         <p class="games-text">
-          Are you looking for the best games in the industry? Look no further
-          than Fatt Boss! We've got all your favourites, from classic slots and
-          table games to the latest releases. With top-rated graphics and smooth
-          gameplay, you'll feel right in the middle of the action. Plus, with
-          new games added all the time, you'll always have options. Try your
-          luck today and see if you have what it takes to be a winner!
+            Szukasz najlepszych gier w branży? Nie szukaj dalej niż Fatt Boss! Mamy wszystkie twoje ulubione, od klasycznych automatów i gier stołowych po najnowsze premiery. Z najlepiej ocenianą grafiką i płynną rozgrywką poczujesz się jak w samym środku akcji. Plus, z nowymi grami dodawanymi cały czas, zawsze będziesz miał opcje. Spróbuj swojego szczęścia dziś i zobacz, czy masz to, co trzeba, aby być zwycięzcą!
         </p>
       </section>
 
@@ -169,9 +170,9 @@
             Złożę ci ofertę, której nie będziesz mógł odrzucić.
             <span class="fat-boss">”</span>
           </h1>
-          <h2 class="offer-subHead">350 EUR Welcome Bonus & 100 Free Spins</h2>
+          <h2 class="offer-subHead">350 EUR bonus powitalny i 100 darmowych spinów.</h2>
           <button class="offer-button">
-            ACCEPT YOUR BONUS & START WINNING BIG!
+            PRZYJMIJ SWÓJ BONUS I ZACZNIJ WYGRYWAĆ DUŻO!
           </button>
         </div>
       </section>
@@ -186,21 +187,13 @@
         </div>
         <div class="devices-text">
           <h1 class="devices-head">
-            Take <span class="fat-boss">Fat Boss</span> with you wherever you
-            go!
+            Zabierz <span class="fat-boss">Fat Boss</span> ze sobą wszędzie, gdzie tylko chcesz
           </h1>
           <h2 class="devices-subHead">
-            Enjoy seamless, mobile-friendly gaming on any device.
+            Ciesz się płynnym i przyjaznym dla urządzeń mobilnych gamingiem na dowolnym urządzeniu.
           </h2>
           <p class="devices-para">
-            At Fatt Boss, we understand that players want the flexibility to
-            game on the go. As a result, we offer a fully mobile-responsive
-            website so that you can play your favourite games from any device,
-            anywhere. With easy navigation and intuitive controls, you'll be
-            able to jump into the action in no time. Consequently, our mobile
-            site is just as secure as our desktop version so you can play
-            confidently. Whether you prefer to play on your phone, tablet, or
-            laptop, Fatt Boss has you covered.
+            W Fatt Boss rozumiemy, że gracze chcą mieć elastyczność, by grać w dowolnym miejscu. W rezultacie oferujemy całkowicie responsywną witrynę mobilną, dzięki czemu możesz grać w swoje ulubione gry z dowolnego urządzenia, w dowolnym miejscu. Dzięki łatwej nawigacji i intuicyjnym sterowaniom będziesz mógł szybko rozpocząć grę. W rezultacie nasza witryna mobilna jest tak samo bezpieczna jak wersja desktopowa, dzięki czemu możesz grać z pewnością. Niezależnie od tego, czy wolisz grać na telefonie, tablecie czy laptopie, Fatt Boss cię objął. Dlatego spróbuj dziś i zobacz, dlaczego Fatt Boss jest najlepszym wyborem dla gier mobilnych! W ten sposób możesz cieszyć się wygodą gry w dowolnym miejscu z poczuciem bezpieczeństwa i niezawodności gry.
           </p>
         </div>
       </section>
@@ -209,10 +202,11 @@
       <section class="review-section">
         <div class="review-text">
           <h1 class="review-head">
-            Players love <span class="fat-boss">Fat Boss</span> Online Casino
+            Gracze uwielbiają kasyno online 
+            <span class="fat-boss">Fat Boss</span>
           </h1>
           <h2 class="review-subHead">
-            The Premier Destination Top-Rated real cash games
+            Najlepsze miejsce dla najlepiej ocenianych gier z prawdziwymi pieniędzmi
           </h2>
         </div>
         <div class="reviews">
@@ -238,10 +232,7 @@
                 />
               </div>
               <p class="review-para">
-                “I’ve been a Fatt Boss player for over a year, and I’ve had
-                nothing but positive experiences. The games are top-notch, and
-                customer support is always available to help with any issues.
-                Highly recommend!”
+                "Jestem graczem Fatt Boss od ponad roku i miałem tylko pozytywne doświadczenia. Gry są świetne, a obsługa klienta zawsze jest dostępna, aby pomóc w razie jakichkolwiek problemów. Gorąco polecam!"
               </p>
             </div>
             <div class="review-wrap">
@@ -264,10 +255,7 @@
                 />
               </div>
               <p class="review-para">
-                “I’ve been a Fatt Boss player for over a year, and I’ve had
-                nothing but positive experiences. The games are top-notch, and
-                customer support is always available to help with any issues.
-                Highly recommend!”
+                "Jestem graczem Fatt Boss od ponad roku i miałem tylko pozytywne doświadczenia. Gry są świetne, a obsługa klienta zawsze jest dostępna, aby pomóc w razie jakichkolwiek problemów. Gorąco polecam!"
               </p>
             </div>
           </div>
@@ -292,9 +280,7 @@
                 />
               </div>
               <p class="review-para">
-                “As a seasoned player, I know a good site when I see one. Fatt
-                Boss has exceeded all of my expectations – the games are fun and
-                the payouts are quick. A+ all around!”
+                "Jestem graczem Fatt Boss od kilku miesięcy i zawsze jestem zachwycony jakością ich gier i obsługi klienta. Gorąco polecam Fatt Bossa za przyjemne i niezawodne doświadczenie z grami."
               </p>
             </div>
             <div class="review-wrap">
@@ -317,9 +303,7 @@
                 />
               </div>
               <p class="review-para">
-                “As a seasoned player, I know a good site when I see one. Fatt
-                Boss has exceeded all of my expectations – the games are fun and
-                the payouts are quick. A+ all around!”
+                "Jako doświadczony gracz wiem, kiedy widzę dobrą stronę. Fatt Boss przekroczył wszystkie moje oczekiwania - gry są zabawne, a wypłaty są szybkie. A+ we wszystkich aspektach!
               </p>
             </div>
           </div>
@@ -330,18 +314,14 @@
       <section class="payment-section">
         <div class="payment-text">
           <h1 class="payment-head">
-            Flexible Payment Options at
-            <span class="fat-boss">Fat Boss</span> Casino
+            Opcje elastyczne płatności w kasynie online
+            <span class="fat-boss">Fat Boss</span>
           </h1>
           <h2 class="payment-subHead">
-            Visa Masteracard 350 EUR Sign-Up Bonus and 100 Free Spins
+            Akceptowane są Visa, Mastercard, Blik, Bitcoin, Ethereum i więcej w Fat Boss
           </h2>
           <p class="payment-para">
-            Do you want to experience the thrill of winning big at an online
-            casino? Look no further than Fat Boss! Our state-of-the-art platform
-            offers a wide selection of exciting casino games, all powered by
-            top-notch software. And as a special offer for new players, we're
-            offering a sign-up bonus of 350 EUR and 100 free spins.
+            W Fatt Boss oferujemy szeroką gamę metod płatności, aby dostosować się do Twoich potrzeb dotyczących gry w kasynie online. Ponadto łatwo możesz dokonywać wpłat i wypłat, aby jak najszybciej wrócić do gry. Czy wolisz tradycyjne opcje, takie jak Visa i Mastercard, czy bardziej nowoczesne metody, takie jak Blik, Bitcoin i Ethereum, mamy wszystko, czego potrzebujesz do gry w kasynie online. Co więcej, staramy się umożliwić obsługę Twoich funduszy jak najbardziej płynną i bezpieczną, podczas gdy korzystasz z naszego szerokiego wyboru gier kasynowych online.
           </p>
         </div>
       </section>
