--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
               >Welcome Bonus</a
             >
           </li>
+          <li class="navitem">
+            <a href="/Polish.html" class="navbutton">Polish</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -59,6 +62,9 @@
             >Welcome Bonus</a
           >
         </li>
+        <li class="navitem">
+            <a href="/Polish.html" class="navbutton">Polish</a>
+          </li>
       </ul>
     </header>
 
