--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="./images/icons/favicon.png" />
     <meta
       name="description"
       content="Welcome to Fat Boss Casino! Our online casino has all your favourite games, including slots, table games, and video poker. Fully licensed and regulated, join now and start winning big!"
@@ -18,7 +19,7 @@
   <body class="main-wrapper">
     <header class="hamburger">
       <div class="hamburger-container">
-        <a href="https://fatbossgambling.ph" class="logo"></a>
+        <a href="https://fatbossgambling.ph/" class="logo"></a>
         <div class="nav-toggle">
           <div class="bar b-one"></div>
           <div class="bar b-two"></div>
