--- a/Polish.html
+++ b/Polish.html
@@ -5,6 +5,7 @@
         <title>Fat Boss Gambling</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+        <link rel="icon" type="image/x-icon" href="./images/icons/favicon.png" />
         <meta name="description"
             content="Welcome to Fat Boss Casino! Our online casino has all your favourite games, including slots, table games, and video poker. Fully licensed and regulated, join now and start winning big!" />
         <script src="main.js"></script>
