--- a/Polish.html
+++ b/Polish.html
@@ -36,9 +36,37 @@
               >Welcome Bonus</a
             >
           </li>
-          <li class="navitem">
-            <a href="/Polish.html" class="navbutton">Polish</a>
-          </li>
+          <div class="navitem">
+            <div class="select-container">
+              <ul>
+                <li
+                  lang-selection="PL"
+                  tooltip="PL"
+                  flow="down"
+                  class="flag pl"
+                >
+                  <a href="./Polish.html">
+                    <img src="./images/icons/poland-flag-round-icon-32.png" />
+                  </a>
+                  PL
+                </li>
+                <li
+                  lang-selection="EN"
+                  tooltip="EN"
+                  flow="down"
+                  onclick="onSelect(this)"
+                  class="flag"
+                >
+                  <a href="./index.html">
+                    <img
+                      src="./images/icons/united-states-of-america-flag-round-icon-32.png"
+                    />
+                  </a>
+                  EN
+                </li>
+              </ul>
+            </div>
+          </div>
         </ul>
       </div>
     </header>
@@ -58,9 +86,37 @@
             >Welcome Bonus</a
           >
         </li>
-        <li class="navitem">
-            <a href="/Polish.html" class="navbutton">Polish</a>
-          </li>
+        <div class="navitem">
+          <div class="select-container">
+            <ul>
+              <li
+                lang-selection="PL"
+                tooltip="PL"
+                flow="down"
+                class="flag pl"
+              >
+                <a href="./Polish.html">
+                  <img src="./images/icons/poland-flag-round-icon-32.png" />
+                </a>
+                PL
+              </li>
+              <li
+                lang-selection="EN"
+                tooltip="EN"
+                flow="down"
+                onclick="onSelect(this)"
+                class="flag"
+              >
+                <a href="./index.html">
+                  <img
+                    src="./images/icons/united-states-of-america-flag-round-icon-32.png"
+                  />
+                </a>
+                EN
+              </li>
+            </ul>
+          </div>
+        </div>
       </ul>
     </header>
 
